@@ -111,19 +111,25 @@ let read_file_as_string filename =
 ;;
 
 let rec get_file_path ?(template_dirs=[]) file_name =
-  match template_dirs with
-    | [] ->
-      let file_path = Filename.concat (Sys.getcwd ()) file_name in
-      if Sys.file_exists file_path then
-	file_path
-      else
-	failwith @@ spf "file %s not found" file_name
-    | dir :: rest ->
-      let file_path = Filename.concat dir file_name in
-      if Sys.file_exists file_path then
-	file_path
-      else
-	get_file_path file_name ~template_dirs:rest
+  if file_name = "" then
+    raise Not_found
+  ;
+  if String.get file_name 0 = '/' && Filename.is_implicit file_name then
+    file_name
+  else
+    match template_dirs with
+      | [] ->
+	let file_path = Filename.concat (Sys.getcwd ()) file_name in
+	if Sys.file_exists file_path then
+	  file_path
+	else
+	  failwith @@ spf "file %s not found" file_path
+      | dir :: rest ->
+	let file_path = Filename.concat dir file_name in
+	if Sys.file_exists file_path then
+	  file_path
+	else
+	  get_file_path file_name ~template_dirs:rest
 ;;
 
 type mutex_pair = {
