@@ -7,6 +7,7 @@
 varsion: 1.2.2, 2012-08-30
 ==========================
 * remove some needless funcs.
+* fix bug about implicit file path.
 
 varsion: 1.2.1, 2012-08-25
 ==========================
